backend/App/security_tests/txt_data/command_error_indicators.txt
command not found
No such file or directory
is not recognized as an internal or external command
syntax error
Permission denied
sh: 1:
bash: line 1:
invalid command
illegal operation
root
administrator
user